syntax = "proto3";

package CareerCloud.gRPC.Services;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "Protos/Common.proto";

option csharp_namespace = "CareerCloud.gRPC.Services";

service CompanyJobEducationProvider{
	rpc GetCompanyJobEducations (google.protobuf.Empty) returns (CompanyJobEducationList);
	rpc GetCompanyJobEducation (CareerCloud.gRPC.Common.IdRequest) returns (CompanyJobEducationProto);
	rpc PostCompanyJobEducation (CompanyJobEducationList) returns (CareerCloud.gRPC.Common.BoolReply);
	rpc PutCompanyJobEducation (CompanyJobEducationList) returns (CareerCloud.gRPC.Common.BoolReply);
	rpc DeleteCompanyJobEducation (CompanyJobEducationList) returns (CareerCloud.gRPC.Common.BoolReply);
}

message CompanyJobEducationProto {
    string id =1;
    string job =2;
    string major =3;
    int32 importance =4;
    bytes time_stamp =5;
}

message CompanyJobEducationList {
    repeated CompanyJobEducationProto company_job_educations = 1; 
}
