syntax = "proto3";

option csharp_namespace = "CareerCloud.gRPCTest.Common";

package CareerCloud.gRPCTest.Common;


message IdRequest {
    string id = 1;
}

message ErrorReply {
    int32 error_code = 1;
    string error_message = 2;
}

message BoolReply {
    bool result = 1;
    repeated ErrorReply Errors = 2;
}